<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:layout_gravity="center"
    android:background="@drawable/home_gradient_login"
    android:focusableInTouchMode="true"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-39dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/registrate"
                    android:textColor="@color/black" />


            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputName"
                        style="@style/parent"
                        android:hint="@string/nombreLogin"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/eTNombre"
                            style="@style/modifiedEditText"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <TextView
                        android:id="@+id/tVNameNotAccepted"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Nombre no aceptado"
                        android:visibility="gone">
                    </TextView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputAM"
                        style="@style/parent"
                        android:hint="@string/apellidoMaterno"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/eTAM"
                            style="@style/modifiedEditText"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <TextView
                        android:id="@+id/tVAMNotAccepted"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="AM no aceptado"
                        android:visibility="gone">
                    </TextView>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputAP"
                        style="@style/parent"
                        android:hint="@string/apellidoPaterno"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/eTAP"
                            style="@style/modifiedEditText"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <TextView
                        android:id="@+id/tVAPNotAccepted"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="AP no aceptado"
                        android:visibility="gone">
                    </TextView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        style="@style/parent"
                        android:hint="@string/correo"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/eTEmailR"
                            style="@style/modifiedEditText"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <TextView
                        android:id="@+id/tVEmailNotAccepted"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Email no aceptado"
                        android:visibility="gone">
                    </TextView>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputUsername"
                        style="@style/parent"
                        android:hint="@string/nombreUsuario"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/eTUsernameR"
                            style="@style/modifiedEditText"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <TextView
                        android:id="@+id/tVUserNameNotAccepted"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Nombre de usuario no aceptado"
                        android:visibility="gone">
                    </TextView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:hint="@string/passwordLogin"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/eTPasswordR"
                            style="@style/modifiedEditText"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <TextView
                        android:id="@+id/tVPassNotAccepted"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Contraseña no aceptada"
                        android:visibility="gone">
                    </TextView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPasswordConf"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:hint="Confirmar Contraseña"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/eTPasswordConfirm"
                            style="@style/modifiedEditText"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <TextView
                        android:id="@+id/tVPassConfNotAccepted"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Confirmación no aceptada"
                        android:visibility="gone">
                    </TextView>

                    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                        android:id="@+id/btnRegisterR"
                        style="@style/StyledBackButton"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:onClick="verifyData"
                        android:text="@string/registerString"
                        app:initialCornerAngle="27dp"
                        app:spinning_bar_color="#FFF"
                        app:spinning_bar_padding="6dp"
                        app:spinning_bar_width="4dp" />

                    <TextView
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:onClick="goBackLogin"
                        android:shadowColor="#FFF"
                        android:shadowDx="-2"
                        android:shadowDy="-2"
                        android:shadowRadius="0.5"
                        android:text="@string/goback"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="100dp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>